[package]
name = "rs_23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.0", features = ["cookies"] }
futures = "0.3.25"
serde = { version = "*", features = ['derive'] }
tokio = { version = "1.25.0", features = ["full"] }
